# guacamole

examples/: CMakeLists.txt
examples/warping/: CMakeLists.txt  Navigator.cpp  Navigator.hpp  main.cpp  timings.md
examples/warping/data/evaluation/: cam_path_sponza.txt  cam_path_teichplatz.txt  cam_path_teichplatz_lod.txt  fast_client_mono_sponza.txt  fast_client_mono_teichplatz.txt  fast_client_mono_teichplatz_lod.txt  fast_client_mono_teichplatz_ruine.txt  fast_client_stereo_teichplatz.txt  fast_client_stereo_teichplatz_lod.txt  fast_client_stereo_teichplatz_ruine.txt  fast_client_times_teichplatz.txt  fast_client_times_teichplatz_lod.txt  fast_client_times_teichplatz_ruine.txt  single_mono_sponza.txt  single_mono_teichplatz.txt  single_mono_teichplatz_lod.txt  single_mono_teichplatz_ruine.txt  single_stereo_teichplatz_lod  single_stereo_teichplatz_lod.txt  single_stereo_teichplatz_ruine.txt  single_times_teichplatz.txt  single_times_teichplatz_lod.txt  slow_client_mono_sponza.txt  slow_client_mono_teichplatz.txt  slow_client_mono_teichplatz_lod.txt  slow_client_mono_teichplatz_ruine.txt  slow_client_stereo_teichplatz.txt  slow_client_stereo_teichplatz_lod.txt  slow_client_stereo_teichplatz_ruine.txt  slow_client_times_teichplatz.txt  slow_client_times_teichplatz_lod.txt  slow_client_times_teichplatz_ruine.txt
examples/warping/data/evaluation/RUN 1/: fast_client_mono_sponza - Copy.txt  fast_client_mono_teichplatz - Copy.txt  fast_client_mono_teichplatz_ruine - Copy.txt  fast_client_stereo_teichplatz - Copy.txt  single_mono_teichplatz - Copy.txt  single_mono_teichplatz_ruine - Copy.txt  single_mono_wappen - Copy.txt  single_stereo_teichplatz - Copy.txt  single_times_teichplatz_ruine - Copy.txt  slow_client_mono_teichplatz - Copy.txt  slow_client_mono_teichplatz_ruine - Copy.txt  slow_client_mono_wappen - Copy.txt  slow_client_stereo_teichplatz - Copy.txt
examples/warping/data/evaluation/RUN 2/: fast_client_mono_teichplatz.txt  fast_client_mono_wappen.txt  single_mono_teichplatz.txt  single_mono_teichplatz_ruine.txt  single_stereo_teichplatz.txt  slow_client_mono_teichplatz.txt  slow_client_mono_teichplatz_ruine.txt  slow_client_stereo_teichplatz_ruine.txt
examples/warping/data/evaluation/RUN 3/: fast_client_mono_teichplatz.txt  fast_client_mono_teichplatz_lod.txt  fast_client_mono_teichplatz_ruine.txt  fast_client_stereo_teichplatz.txt  fast_client_stereo_teichplatz_ruine.txt  single_mono_teichplatz.txt  single_mono_teichplatz_lod.txt  single_mono_teichplatz_ruine.txt  single_stereo_teichplatz.txt  single_stereo_teichplatz_lod.txt  single_stereo_teichplatz_ruine.txt  slow_client_mono_teichplatz.txt  slow_client_mono_teichplatz_lod.txt  slow_client_mono_teichplatz_ruine.txt  slow_client_stereo_teichplatz.txt  slow_client_stereo_teichplatz_lod.txt  slow_client_stereo_teichplatz_ruine.txt
examples/warping/data/evaluation/RUN 4/: fast_client_mono_teichplatz.txt  fast_client_mono_teichplatz_lod.txt  fast_client_mono_teichplatz_ruine.txt  fast_client_stereo_teichplatz.txt  fast_client_stereo_teichplatz_lod.txt  fast_client_stereo_teichplatz_ruine.txt  single_mono_teichplatz.txt  single_mono_teichplatz_lod.txt  single_mono_teichplatz_ruine.txt  single_stereo_teichplatz.txt  single_stereo_teichplatz_lod.txt  single_stereo_teichplatz_ruine.txt  slow_client_mono_teichplatz.txt  slow_client_mono_teichplatz_lod.txt  slow_client_mono_teichplatz_ruine.txt  slow_client_stereo_teichplatz.txt  slow_client_stereo_teichplatz_lod.txt
examples/warping/data/evaluation/backup_paths/: cam_path_teichplatz_ruine.txt
examples/warping/data/evaluation/screenshots/: fast_client_mono_teichplatz_lod.txt  fast_client_stereo_teichplatz_lod.txt  single_mono_teichplatz_lod.txt  single_stereo_teichplatz_lod.txt  slow_client_mono_teichplatz_lod.txt  slow_client_stereo_teichplatz_lod.txt
examples/warping/data/objects/: old-house-2.mtl
resources/shaders/: display_shader.frag  hole_filling_texture.frag  surface_detection_shader.frag  warp_abuffer.frag  (+6 more)
(+35 files in other folders)
